2003-04-03  Roland McGrath  <roland@redhat.com>

	* configure.in: Fix up use of compilation flags to match the build:
	For .s files, $ASFLAGS;
	For .S files, $CPPFLAGS $ASFLAGS;
	For .c files, $CFLAGS $CPPFLAGS;
	when linking, add $LDFLAGS.
	* configure: Regenerated.

2003-04-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/getsysstats.c (get_proc_path): Reverse test
	for atomic_compare_and_exchange_bool_acq failure.

2003-04-03  Ulrich Drepper  <drepper@redhat.com>

	* posix/unistd.h: Define _POSIX_VERSION, _POSIX2_VERSION,
	_POSIX2_C_BIND, _POSIX2_C_DEV, _POSIX2_SW_DEV, and
	_POSXI2_LOCALEDEF to 200112L.  Remove _POSIX2_C_VERSION.
	Remove declaration of pthread_atfork.

2003-04-02  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-639.def: Add many more languages from the current ISO 639.

	* sysdeps/unix/sysv/linux/ipc_priv.h: Define IPCOP_semtimedop.
	* sysdeps/generic/semtimedop.c: New file.
	* sysdeps/unix/sysv/linux/i386/semtimedop.S: New file.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Add semtimedop.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Likewise.
	* sysvipc/Makefile (routines): Add semtimedop.
	* sysvipc/Versions [GLIBC_2.3.3] (glibc): Add semtimedop.
	* sysvipc/sys/sem.h: Declare semtimedop.

2003-04-02  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Check for __register_frame_info in both
	-lgcc and -lgcc_eh.
	* configure: Regenerated.

2003-04-01  Roland McGrath  <roland@redhat.com>

	* scripts/abilist.awk: Allow dots in soname suffix.

	* scripts/abilist.awk (emit): Fix bailout condition.

2003-04-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/sigsuspend.c: Use the
	IA-64 version.

	* elf/tls-macros.h [__ia64__] (TLS_IE, TLS_LD, TLS_GD): Add gp
	register as input to asm.

2003-04-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h (sigevent_t): Fix a typo.

2003-04-01  Andreas Jaeger  <aj@suse.de>
